// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInput  1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa dNjmOA"
              inputmode="numeric"
              pattern="[0-9]*"
              type="text"
              value="12,000.34"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Add"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NumberInput  2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa dNjmOA"
              inputmode="numeric"
              pattern="[0-9]*"
              type="text"
              value="5"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Add"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NumberInput  3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa dNjmOA"
              inputmode="numeric"
              pattern="[0-9]*"
              type="text"
              value="5"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Add"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NumberInput  4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa dNjmOA"
              inputmode="numeric"
              pattern="[0-9]*"
              type="text"
              value="5"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Add"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NumberInput  5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa dNjmOA"
              inputmode="numeric"
              pattern="[0-9]*"
              type="text"
              value="5"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Add"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NumberInput  6`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 fAimXg sc-bdvvaa dNjmOA"
              disabled=""
              inputmode="numeric"
              pattern="[0-9]*"
              type="text"
              value="5"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              class="StyledButton-sc-323bzc-0 clVhgk"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Add"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 clVhgk"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NumberInput  7`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa dNjmOA"
              inputmode="numeric"
              pattern="[0-9]*"
              type="text"
              value="5"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="AddCircle"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,22 C17.5228475,22 22,17.5228475 22,12 C22,6.4771525 17.5228475,2 12,2 C6.4771525,2 2,6.4771525 2,12 C2,17.5228475 6.4771525,22 12,22 Z M12,18 L12,6 M6,12 L18,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="SubtractCircle"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,22 C17.5228475,22 22,17.5228475 22,12 C22,6.4771525 17.5228475,2 12,2 C6.4771525,2 2,6.4771525 2,12 C2,17.5228475 6.4771525,22 12,22 Z M6,12 L18,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NumberInput  8`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa dNjmOA"
              inputmode="numeric"
              pattern="[0-9]*"
              type="text"
              value="$5"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Add"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NumberInput  9`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa dNjmOA"
              inputmode="numeric"
              pattern="[0-9]*"
              type="text"
              value="5 USD"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Add"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NumberInput  10`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa dNjmOA"
              inputmode="numeric"
              pattern="[0-9]*"
              type="text"
              value="200 023"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Add"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NumberInput  11`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa dNjmOA"
              inputmode="numeric"
              pattern="[0-9]*"
              type="text"
              value="200023"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Add"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NumberInput  12`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa dNjmOA"
              inputmode="numeric"
              pattern="[0-9]*"
              type="text"
              value="2000.23"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Add"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NumberInput  13`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa dNjmOA"
              inputmode="numeric"
              pattern="[0-9]*"
              type="text"
              value="5"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Add"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
